--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -40,6 +40,10 @@ width:100%;
 	z-index: 999;
 }
 
+#background-rightbar{
+	display:none;
+}
+
 .topic_list {
 	margin-top: 120px;
 	margin-right: 10px;
@@ -83,6 +87,7 @@ width:100%;
 	float:left;
 	border-radius: 10px 10px 0px 0px;
 	//margin-bottom:5px;
+	display:none;
 }
 
 .userimg>img {
