--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.css
@@ -53,9 +53,9 @@ body{
 
 #dialog_list{
 	//font-size:14px; 
-	//overflow-x:hidden;
+	overflow-x:hidden;
 	width:100%;
-	//height:100%;
+	height:100%;
 	}
 	
 .unread{
