--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page_web.css
@@ -21,14 +21,14 @@ html, body {
 	//width: 14%;
 	//height:80%;
 	 margin-left: 15px;
-	position: absolute;
+	float: left;
 	border-radius:50%;
 	//margin:1.5%;
 }
 
 .dialog_content{
 	//height: 80%;
-	position: absolute;
+	float: right;
 	//width: 300px;
 	//margin:1.5%;
 	border-bottom: 1px solid #585858;
@@ -73,6 +73,4 @@ html, body {
 	font-size:1.2em;
 	//padding-left: 20px;
 }
-.dialoglistOut{
-	width:100%;height:797px;margin-top:64px;overflow-x:hidden
-}
+
