--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -44,6 +44,16 @@ width:100%;
 	display:none;
 }
 
+#background-rightbar-mytag{
+	position:absolute;
+	right:0;
+	//bottom:0;
+	height:100%;
+	width: 22px;
+	z-index: 999;
+	display:none;
+}
+
 .topic_list {
 	margin-top: 120px;
 	margin-right: 10px;
@@ -230,13 +240,14 @@ width:100%;
 .mytag-container{
 	width: 98%;/*这个百分比与下面两个padding百分比总合为1*/
 	padding-left:1%;
-	padding-right:1%;
+	//padding-right:1%;
 	height: 30%;
 	float: left;
 	border-bottom:1px solid #555555;
 	border-top:1px solid #555555;
-	padding-bottom:8px;
-	//overflow-y:auto;
+	//padding-bottom:8px;
+	overflow-y:auto;
+	overflow-x:hidden;
 	display:none;
 }
 /*我的标签最外层容器*/
@@ -556,7 +567,8 @@ width:100%;
     text-align: center;
     border-radius: 25px;
     margin-left: 10px;
-    margin-top:10px;
+    margin-top:5px;
+    margin-bottom:5px;
     //margin-right:6px;
     font-size:.8em;
     letter-spacing:1px;
