--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -49,7 +49,7 @@ width:100%;
 	right:0;
 	//bottom:0;
 	height:100%;
-	width: 22px;
+	width: 24px;
 	z-index: 999;
 	display:none;
 }
@@ -238,9 +238,9 @@ width:100%;
 
 /*我的标签容器*/
 .mytag-container{
-	width: 98%;/*这个百分比与下面两个padding百分比总合为1*/
-	padding-left:1%;
-	//padding-right:1%;
+	//width: 98%;/*这个百分比与下面两个padding百分比总合为1*/
+	padding-left:10px;
+	padding-right:20px;
 	height: 30%;
 	float: left;
 	border-bottom:1px solid #555555;
