--- a/xunta-web/src/main/webapp/client_code/index_page/index.css
+++ b/xunta-web/src/main/webapp/client_code/index_page/index.css
@@ -61,4 +61,6 @@ width:100%;height:40%;
 }
 
 
-#logging {	position: absolute;	top: 40%;	//left: 17%;	width:100%;	font-size: 12px;	color:#777777}
+#logging {	position: absolute;	top: 40%;	//left: 17%;	width:100%;	font-size: 12px;	color:#777777;
+    overflow-y:scroll;
+    height: 50%;}
