--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -1,31 +1,51 @@
-//#userimage {
-	//font-size: 14px;
-//	position: fixed;
-//	top: 12px;
-//	right: 15px;
-//	z-index:101;
-//}
 
+#userinfo{
+    height: 100%;
+    width:13%;
+    position: absolute;
+    bottom: 0;
+    left: 3.5%;	
+}
 
-//#userimage>img {
+.username {
+    text-align: center;
+    font-size: 84%;
+    color: #a2a2a2;
+    cursor: default;
+    position: absolute;
+    bottom: 13px;
+    left: 0;
+    right: 0;
+}
+
+#userimg {
+//height: 34%;
+width: 100%;
+    position: absolute;
+    bottom: 13%;
+    /* padding-top: 100%; */
+    /* padding-bottom: 0%; */
+}
+
+#userimg>img {
 //	position:relative;
-//	height: 24px;
-//	width: 24px;
-//	border-radius: 4px;
-//}
-
+	//height: 100%;
+	width: 100%;
+	border-radius: 29%;
+}
 
 #showonlineoffline {
-	position: absolute;
-	left: 13%;
-	top: 35%;
-	display:none;
-	width: 3%;
-	height: 7%;
+    position: absolute;
+    right: 7%;
+    top: -13%;
+    display: none;
+    width: 20px;
+    height: 20px;
 }
 
 #showonlineoffline>img{
-	height: 7%; width:7%;
+	height: 77%; 
+	//width:7%;
 }
 
 #showouseroprate{
@@ -39,7 +59,7 @@
 #showouseroprate>img{
 	height: 17px; width:15px;
 }
-
+/*
 #account {
 	font-size: 20px;
 	position: fixed;
@@ -52,16 +72,9 @@
 	padding-left: 6px;
 	padding-right: 6px;
 	display: none;
-}
+}*/
 
-.username {
-	text-align: center;
-	//height: 22px;
-	font-size: 1em;
-	//background-color:#c3c3c3;
-	color:#a2a2a2;
-	cursor: default;
-}
+
 
 #alterUserimage {
 	margin-top: 7px;
