--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -520,9 +520,9 @@ width:100%;
 .othertag{
 	position:absolute; 
 	height:100%; 
-	width:99%;
+	width:100%;
 	overflow-x:hidden;
-	margin-left:1%;
+	margin-left:1.8%;
 	//background-color:white;
 }
 
@@ -549,16 +549,16 @@ width:100%;
 	//padding-top:8px;
 	//padding-left:10px;
 	position:fixed;
-	bottom:20px;
-	left:20px;
+	bottom:2%;
+	left:4%;
 	z-index:102;
 	//box-shadow:0 0 50px black;
 	display:none;
 }
 
-.enterdialogList img{
-	height:35px;
-	width:35px;
+.enterdialogList>img{
+	//height:35px;
+	width:23%;
 	box-shadow:0 0 50px black;
 }
 
