--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -238,9 +238,9 @@ width:100%;
 
 /*我的标签容器*/
 .mytag-container{
-	width: 100%;/*这个百分比与下面两个padding百分比总合为1*/
-	padding-left:9px;
-	padding-right:19px;
+	width: 97.6%;/*这个百分比与下面两个padding百分比总合为1*/
+	padding-left:1.4%;
+	padding-right:1%;
 	height: 30%;
 	float: left;
 	border-bottom:1px solid #555555;
@@ -249,6 +249,8 @@ width:100%;
 	overflow-y:auto;
 	overflow-x:hidden;
 	display:none;
+	padding-bottom:2.5%;
+	//padding-top:1%;
 }
 
 #mytag-container::-webkit-scrollbar {
@@ -606,8 +608,8 @@ height:0px;
     text-align: center;
     border-radius: 25px;
     margin-left: 10px;
-    margin-top:5px;
-    margin-bottom:5px;
+    margin-top:0.8%;
+    //margin-bottom:5px;
     //margin-right:6px;
     font-size:.8em;
     letter-spacing:1px;
