--- a/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
@@ -3,6 +3,7 @@ position:fixed; bottom:0;
 height: 30px;
 width: 100%;
 padding-bottom:4px;
+background-color: #f6f6f6; 
 }
 #inputbox{
 float:left;	
