--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page_web.css
@@ -31,8 +31,8 @@
 	float: left;
     text-align: center;
     border-radius: 25px;
-    margin-left: 5px;
-    margin-top:10px;
+    margin-left: 10px;
+    margin-top:0.8%;
     font-size:1em;
     letter-spacing:1px;
     border:1px solid #a1a4a7;
